--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pharmainc",
   "version": "0.1.0",
+  "homepage": "https://github.com/Miguel1989-hub/pharmainc",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -12,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -19,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
